--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,7 +2,7 @@
     padding-bottom: 30px;
 }
 
-.checkoutSection {
+.cdckoutSection {
     display: grid;
     grid-template-columns: 1fr 0.5fr 1fr;
     padding-bottom: 10px;
